--- a/src/Timer.css
+++ b/src/Timer.css
@@ -4,7 +4,8 @@ body {
   align-items: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  color: #FFF;
+  background-color: #091353
 }
 
 #timer {
@@ -12,7 +13,7 @@ body {
 }
 
 #display {
-  font-size: 48px;
+  font-size: 250px;
   margin-bottom: 20px;
 }
 
