--- a/src/Timer.css
+++ b/src/Timer.css
@@ -12,6 +12,12 @@ body {
   text-align: center;
 }
 
+.current-time {
+  font-size: 4rem;
+  font-weight: bold;
+  border-bottom: 1px solid #FFF;
+}
+
 .status-display {
   font-size: 4rem;
 }
