--- a/src/Timer.css
+++ b/src/Timer.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   font-family: Arial, sans-serif;
   color: #FFF;
-  background-color: #091353
+  background-color: #000;
 }
 
 #timer {
