--- a/src/Timer.css
+++ b/src/Timer.css
@@ -42,6 +42,30 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.finish-time-container {
+  font-size: 0.9rem;
+  color: var(--current-time-color);
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.3s;
+}
+
+.finish-time-container:hover {
+  opacity: 1;
+}
+
+.finish-time-label {
+  margin-right: 0.5rem;
+}
+
+.finish-time {
+  display: inline-block;
+  color: var(--rest-phase-color);
+  font-weight: bold;
+}
+
 .status-display {
   font-size: 3rem;
   border-top: 1px solid var(--text-color);
